update: parse pdf manually with pdf cpu
